fix/text-redation-misalignment

--- a/polaris-ui/src/styles.scss
+++ b/polaris-ui/src/styles.scss
@@ -3,8 +3,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src:
-    url("./fonts/NewTransport-RegularWEB.woff") format("woff"),
+  src: url("./fonts/NewTransport-RegularWEB.woff") format("woff"),
     url("./fonts/NewTransport-RegularWEB.woff2") format("woff2");
 }
 
@@ -13,8 +12,7 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src:
-    url("./fonts/NewTransport-BoldWEB.woff") format("woff"),
+  src: url("./fonts/NewTransport-BoldWEB.woff") format("woff"),
     url("./fonts/NewTransport-BoldWEB.woff2") format("woff2");
 }
 
